<resources>
    <string name="app_name">BluePocket</string>

    <string name="textView_clickable_sair">Sair</string>
    <string name="textView_titulo">Blue Pocket</string>

    <string name="textView_usuario">Usuário: </string>

    <string name="textView_cadReceita">Cadastrar Receita</string>
    <string name="textView_cadDespesa">Cadastrar Despesas</string>
    <string name="textView_cadTipo">Cadastrar Tipo</string>
    <string name="textView_lisReceitas">Listar Receitas</string>
    <string name="textView_lisDespesas">Listar Despesas</string>
    <string name="textView_grafRecDes">Receitas e Despesas</string>
    <string name="textView_demoMensal">Demonstrativo Mensal</string>

    <string-array name="tipos">
        <item>Receita</item>
        <item>Despesa</item>
    </string-array>

    <string-array name="dia">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="mes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="ano">
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>
</resources>
